# promethea

./: $  .commitlintrc.json  .env  .gitignore  README.md  default.nix  flake.nix  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.direnv/: flake-profile-1-link  flake-profile-5-link
.github/ISSUE_TEMPLATE/: bug_report.yaml  default-issue-template.md  feature_request.yaml  pull_request_template.md  task.yaml
.github/workflows/: lints.yaml  pr-ci.yaml
.husky/: commit-msg
architecture/: 0001-database.md  0002-hexagonal-components.md  README.md
architecture/Diagrams/: hexagonal.drawio
backend/: Cargo.toml  README.md  temp.sqlite
backend/.sqlx/: query-159d0ff6e4cfb113974d31a3fbe4508db3cf8318be7768e9bc0f6031cd926b28.json  query-3e42bc05d8cc7dd92b0dacfc4d203a504b69ef6f333eb623d2d8af1dce30db7c.json  query-6aefd877ab22d752342ac89c76f5d3fc5438065c853ce87496a8fac70f9e31b5.json  query-a8c08d5eb9f9e061f837d9200fe2cd60c83726e139b02bb92390b55b59ba126c.json  query-bf9018899c8bad1e7206df8a2638e10e74a429c84c3b8f56ac318464d681472f.json  query-c29005c95ad87384b9a360c3b65a1396d05f740fa0386001edf63fdcaddc2220.json  query-d8a86cf562ab575040c776fed68337ac12c9a76bedaaa622dc3965ae6edb7d67.json  query-e86f001011e194644a76a52052b0b164481c75c5b98cad4c72ed910b1a580b93.json  query-ff0a64c18f7040e68a0131d5b9857c12141d03a40f0b63d7648c89cb302dedee.json
backend/adapters/: Cargo.toml  README.md
backend/adapters/src/: lib.rs
backend/crates/adapters/: Cargo.toml  lib.rs  temp.db
backend/crates/adapters/src/: clock.rs  database.rs  filesystem.rs  lib.rs  metadata.rs  repository.rs
backend/crates/adapters/src/repository/: mod.rs  records.rs  repository.rs
backend/crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
backend/crates/desktop-core/: Cargo.toml
backend/crates/desktop-core/src/: lib.rs
backend/crates/desktop/capabilities/: default.json
backend/crates/desktop/migrations/: 202510140625_add_initial_tables.sql
backend/crates/desktop/src/: database.rs  errors.rs  lib.rs  main.rs  new_state.rs  state.rs
backend/crates/promethea_core/: Cargo.toml
backend/crates/promethea_core/migrations/: 202512301635_add_initial_tables.sql
backend/crates/promethea_core/src/: lib.rs  scraper.rs
backend/crates/promethea_core/src/database/: mod.rs  queries.rs  types.rs
backend/crates/promethea_core/src/database/migrations/: 202510140625_add_initial_tables.sql
backend/crates/promethea_core/src/scraper/: client.rs  errors.rs  goodreads_id_fetcher.rs  metadata_fetcher.rs  mod.rs  request.rs  request_builder.rs  sorting.rs
backend/crates/promethea_core/src/scraping/: client.rs  errors.rs  metadata_fetcher.rs  mod.rs
backend/crates/server/: Cargo.toml
backend/crates/server-core/: Cargo.toml
backend/crates/server-core/src/: lib.rs
backend/crates/shared-core/: Cargo.toml
backend/crates/shared-core/src/: lib.rs
backend/crates/shared-core/src/domain/: errors.rs  metadata.rs  mod.rs  records.rs  repository.rs
backend/crates/shared-core/src/ports/: bookrepository.rs  clock.rs  database.rs  filesystem.rs  metadata.rs  mod.rs  repository.rs
backend/crates/shared-core/src/usecases/: books.rs  mod.rs  repository.rs
backend/desktop/: Cargo.toml  README.md
backend/desktop/src/: main.rs
backend/server/: Cargo.toml  README.md
backend/server/src/: main.rs  types.rs
backend/shared/: Cargo.toml  README.md
backend/shared-core/: Cargo.toml
backend/shared/src/: lib.rs
docs/: README.md  README.md.md  sdd-template.md  sdd.md  srs.md
docs/.obsidian/: .vimrc  appearance.json  community-plugins.json  workspace.json
docs/.obsidian/snippets/: obsidian.css
docs/decisions/: DEC-001-rust-rest-backend.md  DEC-001.md  DEC-002-shared-react-typescript-frontend.md  DEC-002.md  DEC-003-server-authoritative-consistency-boundary.md  DEC-003.md  DEC-004-modular-backend-reusable-core.md  DEC-004.md  DEC-005-separate-catalog-database-and-managed-assets.md  DEC-005.md  DEC-006-background-jobs-for-long-operations.md  DEC-006.md  DEC-007-version-epub-before-mutation.md  DEC-007.md  DEC-008-provider-abstraction-for-metadata-and-images.md  DEC-008.md  DEC-009-database-engine-poc-deferred-final-choice.md  DEC-009.md  DEC-010-defer-native-and-multi-medium-extensions.md  DEC-010.md  DEC-011.md  adr-template.md
docs/design/: VIEW-001-system-context.md  VIEW-001.md  VIEW-002-top-level-composition.md  VIEW-002.md  VIEW-003-backend-module-dependency.md  VIEW-003.md  VIEW-004-frontend-application.md  VIEW-004.md  VIEW-005-logical-domain-model.md  VIEW-005.md  VIEW-006-persistence-asset-storage.md  VIEW-006.md  VIEW-007-rest-external-interface.md  VIEW-007.md  VIEW-008-epub-import-metadata-runtime.md  VIEW-008.md  VIEW-009-epub-modification-versioning.md  VIEW-009.md  VIEW-010-reading-tracking-analytics.md  VIEW-010.md  VIEW-011-job-processing-automation.md  VIEW-011.md  VIEW-012-security.md  VIEW-012.md  VIEW-013-deployment-operations.md  VIEW-013.md  VIEW-014-deferred-extension.md  VIEW-014.md  view-template.md
docs/images/: README.md
docs/requirements/: req-template.md
docs/requirements/availability/: REQ-AVAIL-001.md  REQ-AVAIL-002.md
docs/requirements/change-management/: REQ-CM-001.md
docs/requirements/compliance/: REQ-COMP-001.md  REQ-COMP-002.md  REQ-COMP-003.md
docs/requirements/cost/: REQ-COST-001.md
docs/requirements/deadline/: REQ-DEAD-001.md
docs/requirements/distribution/: REQ-DIST-001.md  REQ-DIST-002.md  REQ-DIST-003.md
e2e-tests/: README.md  package.json  tsconfig.json  wdio.conf.ts
frontend/: .gitignore  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
frontend/desktop/: package.json
frontend/server/: package.json
frontend/shared/: package.json
frontend/web/: package.json  vite.config.ts
src/: App.tsx  main.ts  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs
src/lib/: dbFailedToLoad.ts
(+108 files in other folders)
