[workspace]

members = ["crates/desktop", "crates/promethea_core", "crates/server"]
default-members = ["crates/promethea_core", "crates/server", "crates/desktop"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
deprecated-safe = "deny"
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
unknown-or-malformed-diagnostic-attributes = "deny"
unused = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
restriction = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
# allow values with no return and no ; to return
implicit_return = { level = "allow", priority = 1 }
# allow using ? to bubble up errors
question_mark_used = { level = "allow", priority = 1 }
# allow usage of restriction = "warn"
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
# allow functions that are only called once
single_call_fn = { level = "allow", priority = 1 }
# allow multiple versions of same crate because this is not controllable for indirect dependencies
multiple_crate_versions = { level = "allow", priority = 1 }
# allow locally disabling specific lints
allow_attributes = { level = "allow", priority = 1 }
# do not enforce alphabetical ordering
arbitrary_source_item_ordering = { level = "allow", priority = 1 }
# use mod.rs files in modules
mod_module_files = { level = "allow", priority = 1 }
# allow module names to be contained in struct/enum names
module_name_repetitions = { level = "allow", priority = 1 }
# allow shadowing
shadow_reuse = { level = "allow", priority = 1 }
