[workspace]
resolver = "3"
members = ["server", "shared"]

[workspace.package]
rust-version = "1.88"

[workspace.lints.rust]
# enable all Rust lints
warnings = { level = "warn", priority = -1 }
deprecated_safe = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
refining_impl_trait = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unknown_or_malformed_diagnostic_attributes = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
unsafe_code = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }
unreachable_pub = { level = "warn", priority = -1 }
unused_crate_dependencies = { level = "warn", priority = -1 }
unused_extern_crates = { level = "warn", priority = -1 }
unused_import_braces = { level = "warn", priority = -1 }
unused_lifetimes = { level = "warn", priority = -1 }
unused_qualifications = { level = "warn", priority = -1 }
trivial_casts = { level = "warn", priority = -1 }
trivial_numeric_casts = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }
variant_size_differences = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# enable all clippy lints
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
deprecated = { level = "warn", priority = -1 }

# manually toggle conflicting / too strict lints

# prefer 1u8 over 1_u8
unseparated_literal_suffix = "allow"
separated_literal_suffix = "deny"

# general Rust idioms
implicit_return = "allow"
question_mark_used = "allow"
single_char_lifetime_names = "allow"

# module and visibility
mod_module_files = "allow"
self_named_module_files = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"

# regular std workspace -> no use for `no_std` lints
std_instead_of_core = "allow"
std_instead_of_allow = "allow"
alloc_instead_of_core = "allow"
