[package]
name = "promethea"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "promethea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-devtools = "2.0.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
log = "0.4"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = { version = "1.0.100" }
tauri-plugin-process = "2"
epub = { version = "2.1.5" }
