[package]
name = "desktop"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
categories = ["desktop", "backend", "rust"]
keywords = ["books", "library", "e-book"]
license = "MIT"
repository = "https://github.com/praktikantonelli/promethea"
description = "The desktop backend binary for Promethea"
readme = "README.md"

[dependencies]

[lints]
workspace = true
