[package]
name = "adapters"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/praktikantonelli/promethea"
readme = "../../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["ebook", "library", "metadata", "EPUB"]
categories = ["gui", "visualization"]
authors = ["praktikantonelli"]
description = "Adapter definitions following hexagonal architecture"

[dependencies]
shared-core = { path = "../shared-core/" }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
] }
reqwest = { version = "0.13", default-features = false, features = [
  "native-tls",
  "json",
] }
scraper = "0.26.0"
urlencoding = "2.1.3"
epub = "2.1.5"

[lints]
workspace = true
