[package]
name = "promethea"
version = "0.1.0"
repository = "https://github.com/praktikantonelli/promethea"
readme = "../../../README.md"
license = "MIT OR Apache-2.0"
description = "The Tauri application behind Promethea"
keywords = ["ebook", "library", "metadata", "EPUB"]
categories = ["gui", "visualization"]
authors = ["praktikantonelli"]
edition = "2024"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "promethea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-devtools = "2.0.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
log = { version = "0.4", features = ["max_level_info"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "fmt",
  "env-filter",
  "std",
] }
tauri-plugin-process = "2"
dotenvy = "0.15.7"

shared-core = { path = "../shared-core/" }
adapters = { path = "../adapters/" }
