[package]
name = "promethea_core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde_json = "1.0.145"
chrono = "0.4.42"
log = "0.4.28"
regex = "1.12.2"
scraper = "0.24.0"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
pretty_assertions = "1.4.1"
