[package]
name = "promethea_core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = [
  "native-tls",
  "json",
] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
regex = "1.12.2"
scraper = "0.24.0"
urlencoding = "2.1.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
] }
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
pretty_assertions = "1.4.1"
