[package]
name = "shared-core"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/praktikantonelli/promethea"
readme = "../../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["ebook", "library", "metadata", "EPUB"]
categories = ["gui", "visualization"]
authors = ["praktikantonelli"]
description = "The shared library for Promethea"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
async-trait = "0.1.89"

[lints]
workspace = true
